# teleport-tui

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: quality.yml  release.yml
crates/application/: Cargo.toml
crates/application/src/: command.rs  error.rs  lib.rs  use_case.rs
crates/domain/: Cargo.toml
crates/domain/src/: admin.rs  capability.rs  cluster.rs  error.rs  lib.rs  mfa.rs  node.rs  port.rs  profile.rs  recording.rs  request.rs  resource.rs  session.rs  value.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: capability.rs  config.rs  lib.rs  logging.rs  platform.rs  process.rs  redact.rs  tctl.rs
crates/infrastructure/src/tsh/: app.rs  auth.rs  cluster.rs  database.rs  kube.rs  mod.rs  node.rs  recording.rs  request.rs  session.rs
crates/infrastructure/tests/: real_tsh.rs
crates/infrastructure/tests/fixtures/: apps.json  clusters.json  databases.json  kube.json  nodes.json  requests.json  roles.json  status.json  status_loggedout.json  users.json
crates/tui/: Cargo.toml
crates/tui/src/: forms.rs  main.rs  proxy.rs  ssh.rs
crates/tui/src/app/: actions.rs  dispatch.rs  input.rs  mod.rs  model.rs  nav.rs  tests.rs  update.rs
crates/tui/src/ui/: body.rs  chrome.rs  forms.rs  mod.rs  overlays.rs
