[package]
name = "teleport-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "teleport-tui"
path = "src/main.rs"

# Composition root: wires concrete adapters into use cases (dependency
# injection) and renders the ratatui UI. Depends on all layers.
[dependencies]
domain = { workspace = true }
application = { workspace = true }
infrastructure = { workspace = true }
ratatui = { workspace = true }
zeroize = { workspace = true } # scrub the displayed join token from memory

[lints]
workspace = true
